  Add new options dialog panel for folder compare options (#2819626)
  Allow disabling reading of unique folder contents (#2820067)
  Add options GUI for quick compare limit (#2825628)
  Add accelerator keys for Shell context menu (#2823536)
  Add /xq command line switch for closing WinMerge after identical files
    and not showing message (#2827836)
  Bugfix: Did not export changed options values (#2799149)
  Bugfix: Don't highlight identical words if whitespaces are ignored (#2798360)
  Bugfix: Did not reset folder compare method back to original (#2803152)
  Bugfix: Added EOL chars between copied file/path names (#2817546)
  Bugfix: In-line difference highlight fixes (#2824173)
  Translation updates:
  - Dutch (#2801690, #2804979, #2828310)
  - German (r6942)
  - Swedish (#2805726)
  - Turkish (#2825130, #2825132, #2827820)
  - Ukrainian (#2817835)

WinMerge 2.13.8 - 2009-05-26 (r6791)
  Move executable translations to /Translations/WinMerge (r6754)
  Move InnoSetup translations to /Translations/InnoSetup (r6759)
  Move Readme translations to /Translations/Docs/Readme (r6764)
  Create translated ShellExtension RC files from PO files (#2794514)
  Allow editing context line count in patch creator (#2092180)
  Bugfix: Didn't show correct EOL chars if whitespace chars were turned off
    and again on (#2791402)
  Bugfix: Wrong whitespace character highlighted in difference (#2795599)
  Bugfix: Generated patch had wrong file time for UTF-16 files (#2791506)

WinMerge 2.13.7 - 2009-05-13 (r6744)
  Add more C/C++ types to syntax highlight (#2776705)
  Improve startup time (#2788142)
  Create config log file to My Documents-folder (#2789839)
  Installer: Do not install DLL plugins (#2783915)
  Installer: Don't set -x for TSVN command line (#2791093)
  Bugfix: Crash if tabs or EOLs in command line (#2726995)
  Bugfix: Reports had same left/right descriptions (#2772646)
  Bugfix: Diff view highlighted last char diff incorrectly (#2785186)